# PhezuEngine

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  ScriptDefs.hpp  Setup_Mac.sh  Setup_Win.bat  THIRD_PARTY_NOTICES.txt
Editor/EditorShell/: CMakeLists.txt  GenerateEditorDefinesHeader.cmake
Editor/EditorShell/Include/: Command.hpp  EditorShell.hpp  Parser.hpp  Project.hpp
Editor/EditorShell/Source/: EditorShell.cpp  Parser.cpp  main.cpp
Phezu/: CMakeLists.txt
Phezu/Include/: Engine.hpp  Input.hpp  Phezu.hpp  Physics.hpp  Renderer.hpp
Phezu/Include/Asset/Blueprint/: Blueprint.hpp  BlueprintEntry.hpp
Phezu/Include/Asset/Configs/: BuildScenesConfig.hpp
Phezu/Include/Asset/Core/: Asset.hpp  AssetManager.hpp  BuiltInAssets.hpp  BuiltIntAssets.hpp  MetaData.hpp
Phezu/Include/Asset/Types/: ImageAsset.hpp  MaterialAsset.hpp  MeshAsset.hpp  PrefabAsset.hpp  SceneAsset.hpp  ShaderAsset.hpp  TextureAsset.hpp
Phezu/Include/AssetManagement/: AssetManager.hpp  Blueprint.hpp  BlueprintEntry.hpp  BuildScenesConfig.hpp  MetaData.hpp  SceneAsset.hpp
Phezu/Include/Assets/Blueprint/: Blueprint.hpp  BlueprintEntry.hpp
Phezu/Include/Assets/Configs/: BuildScenesConfig.hpp
Phezu/Include/Assets/Core/: Asset.hpp  AssetManager.hpp  BuiltInAssets.hpp  MetaData.hpp
Phezu/Include/Assets/Systems/: AssetManager.hpp
Phezu/Include/Assets/Types/: ImageAsset.hpp  MaterialAsset.hpp  MeshAsset.hpp  PrefabAsset.hpp  SceneAsset.hpp  ShaderAsset.hpp  TextureAsset.hpp
Phezu/Include/Core/: Engine.hpp  Input.hpp  Logger.hpp  Platform.hpp  Window.hpp
Phezu/Include/Core/Defs/: Assert.hpp
Phezu/Include/Core/Types/: Buffer.hpp  Color.hpp  GUID.hpp  MaterialTypes.hpp  Texture.hpp  TextureTypes.hpp  Types.hpp  VertexTypes.hpp
Phezu/Include/Core/Utils/: EnumUtils.hpp
Phezu/Include/Graphics/: GraphicsAPI.hpp  Renderer.hpp
Phezu/Include/Graphics/Core/: GraphicsAPI.hpp  GraphicsTypes.hpp
Phezu/Include/Graphics/Data/: DataBuilder.hpp  Material.hpp  Mesh.hpp  MeshBuilder.hpp  ResourceManager.hpp
Phezu/Include/Graphics/OpenGL/: GLShader.hpp  OpenGLAPI.hpp
Phezu/Include/Graphics/Renderer/: Renderer.hpp  Shader.hpp
Phezu/Include/Graphics/Systems/: Renderer.hpp  ResourceManager.hpp
Phezu/Include/Maths/: Math.hpp  Random.hpp
Phezu/Include/Maths/Objects/: Mat3x3.hpp  Vector2.hpp  Vector3.hpp
Phezu/Include/Platform/Mac/: LoggerMac.hpp
Phezu/Include/Platform/Win32/: InputWin32.hpp  LoggerWin32.hpp  PlatformWin32.hpp  WindowWin32.hpp
Phezu/Include/Scene/: Blueprint.hpp  BlueprintEntry.hpp  BlueprintInstantiator.hpp  Entity.hpp  Prefab.hpp  Scene.hpp  SceneManager.hpp
Phezu/Include/Scene/Components/: CameraData.hpp  DataComponent.hpp  PhysicsData.hpp  RenderData.hpp  ScriptComponent.hpp  ShapeData.hpp  TransformData.hpp
Phezu/Include/Scene/Factory/: BlueprintInstantiator.hpp
Phezu/Include/Scene/Systems/: SceneManager.hpp
Phezu/Include/Scripting/: BehaviourInstance.hpp  ComponentInstance.hpp  EntityInstance.hpp  EntityScriptingContext.hpp  ScriptClass.hpp  ScriptEngine.hpp  ScriptGlue.hpp  ScriptInstance.hpp
Phezu/Include/Scripting/Bindings/: ScriptGlue.hpp
Phezu/Include/Scripting/Core/: EntityScriptingContext.hpp  MonoDefs.hpp  ScriptDefs.hpp
Phezu/Include/Scripting/Managed/: BehaviourInstance.hpp  ComponentInstance.hpp  EntityInstance.hpp  ScriptClass.hpp  ScriptInstance.hpp
Phezu/Include/Scripting/Systems/: ScriptEngine.hpp
Phezu/Include/Serialization/: CustomSerialization.hpp  FileStream.hpp  Stream.hpp
Phezu/Include_/AssetManagement/: BuildScenesConfig.hpp
Phezu/Include_/Scene/Components/: PhysicsData.hpp  ScriptComponent.hpp
Phezu/Source/: Engine.cpp  Input.cpp  Phezu.cpp  Physics.cpp  Renderer.cpp  Window.cpp
Phezu/Source/Asset/Blueprint/: Blueprint.cpp  BlueprintEntry.cpp
Phezu/Source/Asset/Configs/: BuildScenesConfig.cpp
Phezu/Source/Asset/Core/: AssetManager.cpp  BuiltInAssets.cpp  MetaData.cpp
Phezu/Source/Asset/Types/: ImageAsset.cpp  MaterialAsset.cpp  MeshAsset.cpp  PrefabAsset.cpp  SceneAsset.cpp  ShaderAsset.cpp  TextureAsset.cpp
Phezu/Source/AssetManagement/: AssetManager.cpp  Blueprint.cpp  BlueprintEntry.cpp  SceneAsset.cpp
Phezu/Source/Assets/Blueprint/: Blueprint.cpp  (+1 more)
Phezu/Source/Core/: Engine.cpp  Input.cpp  Logger.cpp  Phezu.cpp  Platform.cpp  Window.cpp
Phezu/Source/Graphics/: GraphicsAPI.cpp  Renderer.cpp
Phezu/Source/Maths/: Math.cpp  Random.cpp
Phezu/Source/Platform/: Input.cpp  Logger.cpp  Window.cpp
Phezu/Source/Scene/: Blueprint.cpp  BlueprintEntry.cpp  BlueprintInstantiator.cpp  Entity.cpp  Prefab.cpp  Scene.cpp  SceneManager.cpp
Phezu/Source/Scripting/: BehaviourInstance.cpp  ComponentInstance.cpp  EntityInstance.cpp  ScriptClass.cpp  ScriptEngine.cpp  ScriptGlue.cpp  ScriptInstance.cpp
Phezu/Source/Serialization/: CustomSerialization.cpp
Phezu/include/AssetManagement/: AssetManager.hpp  MetaData.hpp
Phezu/include/phezu/: AssetManager.hpp  Engine.hpp  GUID.hpp  Input.hpp  Logger.hpp  Phezu.hpp  Physics.hpp  Random.hpp  Renderer.hpp  Window.hpp
Phezu/include/scene/: BlueprintEntry.hpp  Entity.hpp  Prefab.hpp
Phezu/src/: AssetManager.cpp  BehaviourComponentPrefab.cpp  DataComponent.cpp  Engine.cpp  Entity.cpp  EntityBlueprint.cpp  EntityTemplate.cpp  Input.cpp  Logger.cpp  Phezu.cpp  Physics.cpp  PrefabEntity.cpp  Random.cpp  Renderer.cpp  Scene.cpp  ShapeData.cpp  TransformData.cpp  Window.cpp
Phezu/src/AssetManagement/: AssetManager.cpp  BuildScenesConfig.cpp  MetaData.cpp
Phezu/src/maths/: Math.cpp  Random.cpp
Phezu/src/scene/: Blueprint.cpp  BlueprintEntry.cpp  Entity.cpp  EntityBlueprint.cpp  EntityTemplate.cpp  Prefab.cpp  Scene.cpp  SceneManager.cpp
Phezu/src/scripting/: BehaviourInstance.cpp  ComponentInstance.cpp  EntityInstance.cpp  MonoLogger.cpp  ScriptClass.cpp  ScriptEngine.cpp  ScriptGlue.cpp  ScriptInstance.cpp
Phezu/src/serialization/: CustomSerialization.cpp
Runtime/: CMakeLists.txt  CopyIfMissing.cmake  GenerateRuntimeHeader.cmake  Info.plist
Runtime/Include/: Application.hpp
Runtime/Source/: main.cpp
Runtime/include/: Application.hpp
Runtime/src/: main.cpp
(+257 files in other folders)
