cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)

project(PhezuEngine)

if (NOT DEFINED PROCESSOR_COUNT)
    set(PROCESSOR_COUNT 1)
    if (WIN32)
        set(PROCESSOR_COUNT "$ENV{NUMBER_OF_PROCESSORS}")
        math(EXPR BUILD_CORES "${PROCESSOR_COUNT} * 3 / 4")
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP${BUILD_CORES}")
        message(STATUS "Cores Found: ${PROCESSOR_COUNT}")
    endif()
endif()

set(PROJECT_SRC_DIR "${CMAKE_SOURCE_DIR}/Projects/Default" CACHE PATH "Root directory of the project")
set(SCRIPT_CORE_DLL_SRC_DIR "${CMAKE_BINARY_DIR}/ScriptCore/Build/bin" CACHE INTERNAL "")

if (APPLE)
    set(MONO_CORE_LIBS_RELATIVE_PATH "../MonoCoreLibs/mono" CACHE INTERNAL "")
    set(SCRIPT_CORE_DLL_RELATIVE_PATH "../MonoAssemblies" CACHE INTERNAL "")

    set(LIB_SRC_DIR "${CMAKE_SOURCE_DIR}/Phezu/Vendor/lib/mac" CACHE INTERNAL "")
    set(LIB_DEST_DIR "$<TARGET_FILE_DIR:Runtime>/../Frameworks" CACHE INTERNAL "")
    set(MONO_CORE_LIBS_SRC_DIR "${CMAKE_SOURCE_DIR}/Vendor/mac/mono" CACHE INTERNAL "")
    set(MONO_CORE_LIBS_DEST_DIR "$<TARGET_FILE_DIR:Runtime>/../MonoCoreLibs" CACHE INTERNAL "")
    set(PROJ_DEST_DIR "$<TARGET_FILE_DIR:Runtime>/../Project" CACHE INTERNAL "")
    set(SCRIPT_CORE_DLL_DEST_DIR "$<TARGET_FILE_DIR:Runtime>/${SCRIPT_CORE_DLL_RELATIVE_PATH}" CACHE INTERNAL "")
    set(CSHARP_BUILD_COMMAND csc CACHE INTERNAL "")
elseif (WIN32)
    set(MONO_CORE_LIBS_RELATIVE_PATH "mono/lib/mono/4.5" CACHE INTERNAL "")
    set(MONO_EXECUTABLE "${CMAKE_SOURCE_DIR}/Vendor/windows/mono/bin/mono.exe")
    set(CSHARP_COMPILER "${CMAKE_SOURCE_DIR}/Vendor/windows/mono/lib/mono/4.5/csc.exe")
    set(SCRIPT_CORE_DLL_RELATIVE_PATH "" CACHE INTERNAL "")

    set(LIB_SRC_DIR "${CMAKE_SOURCE_DIR}/Phezu/Vendor/lib/windows" CACHE INTERNAL "")
    set(LIB_DEST_DIR "$<TARGET_FILE_DIR:Runtime>" CACHE INTERNAL "")
    set(MONO_CORE_LIBS_SRC_DIR "${CMAKE_SOURCE_DIR}/Vendor/windows/mono" CACHE INTERNAL "")
    set(MONO_CORE_LIBS_DEST_DIR "${LIB_DEST_DIR}" CACHE INTERNAL "")
    set(PROJ_DEST_DIR "${LIB_DEST_DIR}/Project" CACHE INTERNAL "")
    set(SCRIPT_CORE_DLL_DEST_DIR "${LIB_DEST_DIR}" CACHE INTERNAL "")
    set(CSHARP_BUILD_COMMAND ${MONO_EXECUTABLE} ${CSHARP_COMPILER} CACHE INTERNAL "")
endif()

add_subdirectory(Phezu)
add_subdirectory(Runtime)
add_subdirectory(ScriptCore)
